--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
+    <link rel="stylesheet" href="sarkanyok.css">
     <meta charset="UTF-8">
     <title>Sárkányok</title>
 </head>
