--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="keret">
 <h1>Sárkányok</h1>
+<img class="jobbrakep" src="kinaigombsarkany.jpg" alt="Kínai gömbsárkány">
 <h2>Kínai gömblángsárkány (oroszlánsárkány)</h2>
 <p>Az egyetlen távol-keleti sárkányfaj. Külseje igen szembetűnő. Testét sima, vörös pikkelyek borítják, fitos orrban végződő pofáját aranyszínű tüskék veszik körül, szeme látványosan kidülled. Nevét annak köszönheti, hogy ha ingerlik orrlyukain keresztül gomba alakú tűzgomolyagot fúj. Testsúlya 2-4 tonna, a nőstény nagyobb a hímnél. Élénkpiros, arannyal pöttyözött tojásának héja nagyra becsült varázsszer a kínai mágiában. A gömblángsárkány agresszív, de fajtársai közelségét a többi sárkánynál jobban tűri. Néha még vadászterületét is hajlandó megosztani egy-két másik sárkánnyal. Mindenféle emlőst elfogyaszt, de legjobban a sertést és az embert szereti.</p>
 
@@ -21,7 +22,7 @@
 <h2>Magyar mennydörgő</h2>
 <p>Az egyik legveszedelmesebbnek tartott sárkányfaj.</p>
 
-<p>Kimondottan óriásgyíkszerű testét fekete pikkelyek borítják. Szeme sárga, szarvai és a farkából kiálló tüskék bronzvörösek. Kivételesen hosszú lángcsóvát tud fújni, akár 15 métereset is. Cementszürke tojásának héja rendkívül kemény. Áttöréséhez a kicsinyek kikelésükkor a farkukat használják, amelyen addigra kifejlődnek a tüskék. A magyar mennydörgősárkány kecskét, juhot és – ha teheti – embert eszik. Nagyjából 4-5 méter magas, és a hossza 15 méter. Szárnyfesztávolsága eléri a 8 métert is. A magyar mennydörgő (Hungarian Horntail) a negyedik kötetben Harry Potter sárkánya a Trimágus Tusán.</p>
+<img class="jobbrakep" src="magyarmennydorgo.jpg" alt="Magyar mennydörgő"><p>Kimondottan óriásgyíkszerű testét fekete pikkelyek borítják. Szeme sárga, szarvai és a farkából kiálló tüskék bronzvörösek. Kivételesen hosszú lángcsóvát tud fújni, akár 15 métereset is. Cementszürke tojásának héja rendkívül kemény. Áttöréséhez a kicsinyek kikelésükkor a farkukat használják, amelyen addigra kifejlődnek a tüskék. A magyar mennydörgősárkány kecskét, juhot és – ha teheti – embert eszik. Nagyjából 4-5 méter magas, és a hossza 15 méter. Szárnyfesztávolsága eléri a 8 métert is. A magyar mennydörgő (Hungarian Horntail) a negyedik kötetben Harry Potter sárkánya a Trimágus Tusán.</p>
 
 <h2>Norvég tarajossárkány</h2>
 <p>A norvég tarajos meglehetősen hasonlít a mennydörgőhöz, de nem faroktüskéi vannak, hanem erőteljes, szurokfekete taréjok sorakoznak a gerince mentén, Fajtársaival szemben különösen ellenséges, állománya napjainkra erősen megcsappant. Alig van olyan nagy testű szárazföldi emlős, amit ne fogyasztana el, és - sárkányoktól szokatlan módon - a vízi állatokat se veti meg. A tarajos tojása fekete, kicsinyei a többi fajhoz képest korán (már 1-3 hónapos korukban) elkezdenek tüzet fújni.</p>
